[package]
name = "zune"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
  "crates/*",
  "tests/",
  "benchmarks"
  
]

[dependencies]
zune-bin = { path = "./crates/zune-bin" }

[profile.release]
debug = 2

[profile.bench]
debug = true
