[package]
name = "zune"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/etemesi254/zune-image.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "crates/*",
    "tests",
    "benchmarks"
]
exclude = ["crates/zune-opencl"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Where to host releases
hosting = ["github"]

[dependencies]
zune-bin = { path = "./crates/zune-bin" }

#[profile.release]
#debug = 2

[profile.bench]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


