[package]
name = "zune"
version = "0.5.3"
rust-version = "1.87.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/etemesi254/zune-image.git"
authors = ["Caleb Etemesi"]
[package.metadata.wix]
upgrade-guid = "D9787DDA-210F-402A-B935-CBF19F974A23"
path-guid = "A0995AC9-B8F5-44CC-B6D9-FDCD5C7CDE17"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "crates/*",
    "tests",
    "benchmarks"
]
exclude = ["crates/zune-python"]

[dependencies]
zune-bin = { path = "./crates/zune-bin" }

[profile.release]
debug = 2

[profile.bench]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


