[package]
name = "zune-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# QOI benchmarks
zune-qoi = { path = "../crates/zune-qoi" }
rapid-qoi = "0.6.1"

# deflate benchmarks
flate2 = { version = "1.0.25", default-features = false, features = ["zlib-ng-compat"] }
libdeflater = "1.19.0"
zune-inflate = { path = "../crates/zune-inflate" }

# png benchmarks
png = { version = "0.17.11" }
spng = { version = "0.1.0", features = ["zlib-ng"] }
lodepng = "3.7.2"
zune-png = { path = "../crates/zune-png" }

# JPEG benchmarks
mozjpeg = "0.10.5"
jpeg-decoder = "0.3.0"
zune-jpeg = { path = "../crates/zune-jpeg" }

#other format
zune-image = { path = "../crates/zune-image", features = ["all"] }
zune-hdr = { path = "../crates/zune-hdr" }
image = { version = "0.24.8", default-features = false, features = ["bmp", "hdr"] }

[dev-dependencies.criterion]
version = "0.5.1"
default-features = false
features = ["html_reports"]

[[bench]]
name = "decode_qoi"
harness = false

[[bench]]
name = "decode_inflate"
harness = false


[[bench]]
name = "decode_png"
harness = false

[[bench]]
name = "decode_jpeg"
harness = false

[[bench]]
name = "decode_hdr"
harness = false