[package]
name = "zune-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = { version = "0.8.6", default-features = false, features = ["xxh3"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.94"
zune-core = {  path = "../crates/zune-core" }
zune-jpeg = {  path = "../crates/zune-jpeg" }
zune-psd = {  path = "../crates/zune-psd" }
zune-png = {  path = "../crates/zune-png" }
zune-inflate = {  path = "../crates/zune-inflate" }
zune-bmp = {  path = "../crates/zune-bmp" }
