[package]
name = "zune-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
zune-image = { version = "0.1.0", path = "../zune-image", features = ["all"] }
zune-core = { path = "../zune-core" }
memmap2 = "0.5.7"

[dependencies.simple_logger]
git = "https://github.com/etemesi254/rust-simple_logger"
default-features = false
features = ["colors"]

[dependencies.clap]
version = "4.0.13"
default-features = false
features = ["color", "suggestions", "std", "help", "error-context"]
