[package]
name = "zune-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
ppm = ["zune-ppm"]
jpeg = ["zune-jpeg"]
png = ["zune-png"]
psd = ["zune-psd"]
default = []
threads = []
all = ["jpeg", "ppm", "threads", "png", "psd"]

[dependencies]
zune-jpeg = { path = "../zune-jpeg", optional = true }
zune-imageprocs = { path = "../zune-imageprocs" }
zune-png = { path = "../zune-png", optional = true }
zune-core = { path = "../zune-core" }
zune-ppm = { path = "../zune-ppm", optional = true }
zune-psd = { path = "../zune-psd", optional = true }
log = "0.4.17"