[package]
name = "zune-imageprocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.17"


[features]
avx2 = []
sse2 = []
sse3 = []
sse41 = []
## Needs nightly, disabled by default
benchmarks=[]

default=["avx2","sse2","sse3","sse41"]


[dev-dependencies]
nanorand={version="0.7.0",default-features=false,features=["wyrand"]} # testing purposes.