[package]
name = "zune-imageprocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zune-core = { path = "../zune-core" }
zune-image = { default-features = false, path = "../zune-image" }

[features]
avx2 = []
sse2 = []
sse3 = []
sse41 = []
threads = []
## Needs nightly, disabled by default
benchmarks = []
log = ["zune-core/log"]
default = ["avx2", "sse2", "sse3", "sse41", "threads"]


[dev-dependencies]
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] } # testing purposes.