[package]
name = "zune-inflate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-adler32 = "0.3.4" # Use it, generally faster and support for a wide variety of archs, no need to roll out my own
[dev-dependencies]
flate2 = { version = "1.0.25" }
criterion = "0.4.0"


[[bench]]
name = "decode"
harness = false
