[package]
name = "zune-jpeg"
version = "0.3.12"
authors = ["caleb <etemesicaleb@gmail.com>"]
edition = "2021"
repository = "https://github.com/etemesi254/zune-image/tree/dev/zune-jpeg"
license = "MIT OR Apache-2.0"
keywords = ["jpeg", "jpeg-decoder", "decoder"]
categories = ["multimedia::images"]
exclude = ["/benches/images/*", "/tests/*", "/.idea/*", "/.gradle/*", "/test-images/*", "fuzz/*"]
description = "A fast,correct and safe jpeg decoder"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
x86 = []
std = ["zune-core/std"]
default = ["x86", "std"]


[dependencies]
log = "0.4.11" # logging facilities
zune-core = { path = "../zune-core", version = "0.2.1" }

