[package]
name = "zune-png"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
## Disabling this disables CRC checking and the associated code for that
## Can save some bytes on images.
## Note, this can be disabled manually using options
crc = []
sse = []
std = ["zune-core/std"]
default = ["crc", "sse"]

[dependencies]
zune-core = { path = "../zune-core", version = "0.2.1" }
log = "0.4.17"
zune-inflate = { path = "../zune-inflate", default-features = false, features = ["zlib"] }
bytemuck = { version = "1.13.1", default-features = false }

[dev-dependencies]
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] } # testing purposes.
png = "0.17.8-rc"
spng = "0.1.0"