[package]
name = "zune-bin"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
zune-image = { version = "0.4.0", path = "../zune-image", features = ["all"] }
zune-core = { path = "../zune-core", version = "0.4" }
memmap2 = "0.9.0"
serde_json = "1.0.93"
serde = "1.0.152"

[dependencies.simple_logger]
version = "4.0.0"
default-features = false
features = ["colors"]

[dependencies.clap]
version = "4.2.1"
default-features = false
features = ["color", "suggestions", "std", "help"]
