[package]
name = "zune-bin"
version = "0.5.0-rc0"
edition = "2021"
repository = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-bin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
zune-image = { version = "^0.5.0-rc0", path = "../zune-image", features = ["all"] }
zune-core = { path = "../zune-core", version = "0.5.0-rc0" }
zune-imageprocs = { path = "../zune-imageprocs" }
#zune-opencl = { path = "../zune-opencl" }
serde_json = "1.0.93"
serde = "1.0.152"

[dependencies.simple_logger]
version = "4.0.0"
default-features = false
features = ["colors"]

[dependencies.clap]
version = "4.4.11"
default-features = false
features = ["color", "suggestions", "std", "help"]
