[package]
name = "zune-farbfeld"
version = "0.4.0"
edition = "2021"
description = "Farbfeld image decoder"
exclude = ["tests/"]
homepage = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-farbfeld"
keywords = ["image"]
categories = ["multimedia::images", "multimedia::encoding","multimedia::decoding"]
license = "MIT OR Apache-2.0 OR Zlib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = ["zune-core/log"]

[dependencies]
zune-core = { path = "../zune-core", version = "0.4" }
