[package]
name = "zune-gif"
version = "0.5.0-rc0"
edition = "2021"
repository = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-gif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
log = ["zune-core/log"]

[dependencies]
zune-core = { version = "0.5.0-rc0", path = "../zune-core", default-features = false }

