[package]
name = "zune-hdr"
version = "0.5.0-rc0"
edition = "2021"
description = "Radiance/HDR image decoder and encoder"
exclude = ["fuzz/"]
homepage = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-hdr"
keywords = ["image"]
categories = ["multimedia::images", "multimedia::encoding", ]
license = "MIT OR Apache-2.0 OR Zlib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
log = ["zune-core/log"]

[dependencies]
zune-core = { version = "0.5.0-rc0", path = "../zune-core", default-features = false, features = ["std"] }