[package]
name = "zune-imageprocs"
version = "0.4.13"
edition = "2021"
repository = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-imageprocs"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["image", "image-processing"]
categories = ["multimedia::images"]
description = "Common image processing routines for zune-image"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zune-core = { path = "../zune-core", version = "0.4" }
zune-image = { path = "../zune-image", version = "0.4", default-features = false }
kamadak-exif = { version = "0.5.5", optional = true }

[features]
avx2 = []
sse2 = []
sse3 = []
sse41 = []
## Needs nightly, disabled by default
benchmarks = []
## Portable simd, disabled by default
portable-simd = []
log = ["zune-core/log"]
exif = ["zune-image/metadata", "kamadak-exif"]
threads = []
default = ["avx2", "sse2", "sse3", "sse41", "threads"]


[dev-dependencies]
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] } # testing purposes.