[package]
name = "zune-inflate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
flate2 = { version = "1.0.25", default-features = false, features = ["zlib-ng"] }
criterion = "0.4.0"


[[bench]]
name = "decode"
harness = false
