[package]
name = "zune-jpeg"
version = "0.5.0-rc0"
authors = ["caleb <etemesicaleb@gmail.com>"]
edition = "2021"
repository = "https://github.com/etemesi254/zune-image/tree/dev/crates/zune-jpeg"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["jpeg", "jpeg-decoder", "decoder"]
categories = ["multimedia::images"]
exclude = ["/benches/images/*", "/tests/*", "/.idea/*", "/.gradle/*", "/test-images/*", "fuzz/*"]
description = "A fast, correct and safe jpeg decoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
x86 = []
neon = []
std = ["zune-core/std"]
log = ["zune-core/log"]
default = ["x86", "neon", "std"]

[dependencies]
zune-core = { path = "../zune-core", version = "^0.5.0-rc0" }


[dev-dependencies]
zune-ppm = { path = "../zune-ppm" }
