[package]
name = "zune-jpegxl"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zune-core = { version = "0.4", path = "../zune-core" }

[features]
threads = []
std = []
log = ["zune-core/log"]
default = ["threads", "std"]

[dev-dependencies]
zune-ppm = { path = "../zune-ppm" }